--- a/style.css
+++ b/style.css
@@ -1,1 +1,91 @@
+.centerr{
+    margin: 20px auto;
+    
+}
 
+header{
+    padding: 80px;
+}
+.img{
+    height: 300px;
+    display:block;
+    margin: 10px auto;
+    border-radius: 100px;
+
+}
+h1{
+    padding-left: 40%;
+    padding-right: 35%;
+    padding-top: 20px;
+}
+
+/* h2{
+    border-color:#6495ed;
+    border-width: 4px;
+    padding: 15px;
+    border-radius: 30px;
+   
+} */
+main{
+    background-color: lavender;
+    padding-left: 160px;
+    padding-right: 70px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.rs_logo{
+    width: 80px;
+}
+
+footer{
+    background-color: white;
+}
+body{
+    font-family: 'Poppins', sans-serif;
+    background-color: #fff;
+}
+
+.code_ex{
+    margin: 5px;
+    padding: 30px;
+    width: 620px;
+    color:white;
+    font-size: 20px;
+    background-color: #164c83;
+    border-radius: 12px;
+}
+
+.top{
+    position: fixed;
+	right: 45px;
+	bottom: 45px;
+    height: 40px;
+    width: 40px;
+    border-radius: 12px;
+    padding: 10px;
+    background-color: #6495ed;
+    line-height: 40px;
+    text-align: center;
+    font-size: 20px;
+    text-decoration: none;
+    color: #fff;
+}
+a{
+    text-decoration: none;
+}
+
+footer{
+    padding: 30px;
+}
+.foot{
+    float:left;
+    width: 50%;
+}
+
+.about{
+   padding-left: 40px;
+   padding-right: 50px;
+}
